Authentication and Authorization Auth API

--- a/Mango.Services.AuthAPI/appsettings.json
+++ b/Mango.Services.AuthAPI/appsettings.json
@@ -8,6 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "myConnectionStrings": "Data Source=LAPTOP-V175VFGH;Initial Catalog=Mango_Auth;Integrated Security=True;Trust Server Certificate=True"
-
+  },
+  "ApiSettings": {
+    "JwtOptions": {
+      "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
+      "Issuer": "mango-auth-api",
+      "Audience": "mango-client"
+    }
   }
 }
