Done Login and Registration

--- a/Mango.Services.RoomTypeAPI/appsettings.json
+++ b/Mango.Services.RoomTypeAPI/appsettings.json
@@ -9,9 +9,9 @@
   "ConnectionStrings": {
     "myConnectionStrings": "Data Source=LAPTOP-V175VFGH;Initial Catalog=Mango_RoomType;Integrated Security=True;Trust Server Certificate=True"
   },
-
-  "Issuer": "https://localhost:7001", //Project Property-> Debug-> IIS-->App URL (you can local host url as well)
-  "Audience": "https://localhost:7001",
-  "Key": "QMpeMibn3OBH98vcmutP10jkQMpeMibn3OBH98vcmutP" //Generate random String from https://www.random.org/strings
-
+  "ApiSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
+    "Issuer": "mango-auth-api",
+    "Audience": "mango-client"
+  }
 }
